# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "http_fetcher_async",
    hdrs = [
        "http_fetcher_async.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":curl_request_data",
        "@com_google_absl//absl/time",
    ],
)

cc_library(
    name = "curl_request_data",
    srcs = [
        "curl_request_data.cc",
    ],
    hdrs = [
        "curl_request_data.h",
    ],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@curl",
        "@libevent//:event",
    ],
)

cc_library(
    name = "multi_curl_request_manager",
    srcs = [
        "multi_curl_request_manager.cc",
    ],
    hdrs = [
        "multi_curl_request_manager.h",
    ],
    deps = [
        ":curl_request_data",
        ":http_fetcher_async",
        "//src/concurrent:executor",
        "//src/core/event",
        "//src/core/event:event_base",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
        "@curl",
        "@libevent//:event",
    ],
)
